# Karl_AI_Ecosystem

./: .gitignore  DEPLOY.md  DEPLOYMENT.md  DEVAGENT-24-7.md  Dockerfile  Karl_AI_Ecosystem_v3.7_Optimizado.md  Makefile  PROJECT-COMPLETION-REPORT.md  Procfile  README.md  SISTEMA_LIMPIO.md  STATUS.md  alembic.ini  deploy-railway.py  devagent-service.py  docker-compose.devagent.yml  docker-compose.yml  mcp-config.json  mcp-server.py  mcp-simple.py  pyproject.toml  railway-deploy.md  railway-deploy.ps1  railway-deploy.sh  railway.json  railway_optimized.json  render.yaml  requirements-mcp.txt  requirements.txt  run-ecosystem.py  start.py  test.py
.github/workflows/: cd.yml  ci.yml
agents/: __init__.py  base_agent.py  cloud_agent.py  data_agent.py  integration_agent.py  security_agent.py
agents/devagent/: README.md  __init__.py
agents/devagent/app/: __init__.py  executor.py  main.py
agents/devagent/prompts/: __init__.py  system.md
agents/devagent/tests/: __init__.py  (+5 more)
configs/: agent_config.yaml  api_optimized.env  approvals.md  database.env  env.dev  env.example  env.prod  env.production  env.test  kanban.json  monitoring.env  monitoring_optimized.env
corehub/: README.md  __init__.py
corehub/api/: __init__.py  main.py  middleware.py  schemas.py  websocket.py
corehub/db/: __init__.py  database.py  models.py
corehub/scheduler/: __init__.py  jobs.py
corehub/services/: __init__.py  agent_context.py  alerts.py  cache.py  metrics.py  monitor.py  notifications.py
corehub/tests/: __init__.py  test_api_admin.py  test_api_events.py  test_api_health.py  test_api_report.py  test_api_tasks.py  test_cache.py  test_dashboard_api.py  test_models.py  test_monitoring.py  test_notifications.py
corehub/tools/: __init__.py  corehub_client.py
dashboard/app/: globals.css  page.tsx
dashboard/components/: agent-context-dashboard.tsx  agents-section.tsx  dashboard-header.tsx  logs-section.tsx  metrics-cards.tsx  monitoring-dashboard.tsx  tasks-section.tsx
dashboard/config/: api.ts
playbooks/: content_publish.md  dev_workflow.md  quality_framework.md
reports/daily/: 2025-10-22.md
reports/prs/: PR-T-101.md  PR-T-102.md
reports/templates/: daily.md
scripts/: deploy-render.sh  devagent-systemd.service  init-db.sql  install-devagent-service.sh  monitor-devagent.sh  run-integration-tests.py  validate.sh
tests/: test_system_integration.py
(+16 files in other folders)
